grundlagen verbessert und diskussion

--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -131,22 +131,21 @@ der Leistung der Zelle verwendet werden. Durch die Analyse der Diodenkennlinie
 können die folgenden Schlüsselparameter der Solarzelle bestimmt werden:
 
 \begin{enumerate}
-	\item Leerlaufspannung (Voc): Dies ist die Spannung, bei der die Solarzelle keinen
+	\item Leerlaufspannung ($U_L$): Dies ist die Spannung, bei der die Solarzelle keinen
 	      Strom erzeugt, und entspricht der maximalen Ausgangsspannung der Zelle. Die
 	      Leerlaufspannung wird durch die Beleuchtungsstärke und die intrinsischen
 	      Eigenschaften der Zelle bestimmt.
-	\item Kurzschlussstrom (Isc): Dies ist der Strom, der von der Solarzelle erzeugt
+	\item Kurzschlussstrom ($I_k$): Dies ist der Strom, der von der Solarzelle erzeugt
 	      wird, wenn die Spannung über der Zelle gleich Null ist, und entspricht der
 	      maximalen Stromabgabe der Zelle. Der Kurzschlussstrom wird durch die
 	      Beleuchtungsstärke und die physikalischen Eigenschaften der Zelle bestimmt.
-	\item Füllungsfaktor (FF): Er ist ein Maß für den Wirkungsgrad der Solarzelle und
-	      wird durch das Verhältnis zwischen der maximalen Ausgangsleistung der Zelle und
-	      dem Produkt aus Leerlaufspannung und Kurzschlussstrom bestimmt. Der Füllfaktor
-	      wird von den physikalischen Eigenschaften der Zelle, wie der Rekombinationsrate
-	      und dem Serien- und Nebenschlusswiderstand, beeinflusst.
+	\item Füllfaktor ($FF$): Er ist ein Maß für den Wirkungsgrad der Solarzelle und wird
+	      durch das Verhältnis zwischen der maximalen Ausgangsleistung der Zelle und dem
+	      Produkt aus Leerlaufspannung und Kurzschlussstrom bestimmt. Der Füllfaktor wird
+	      von den physikalischen Eigenschaften der Zelle, wie der Rekombinationsrate und
+	      dem Serien- und Nebenschlusswiderstand, beeinflusst.
 	\item Maximaler Leistungspunkt (MPP): Dies ist der Punkt auf der Diodenkennlinie, an
 	      dem die Solarzelle die maximale Leistung abgibt. Der Punkt maximaler Leistung
-	      wird durch den Schnittpunkt der Lastlinie mit der Diodenkennlinie bestimmt und
 	      wird von der Beleuchtungsstärke und den physikalischen Eigenschaften der Zelle
 	      beeinflusst.
 \end{enumerate}
@@ -702,6 +701,9 @@ Beschaltungen und Belichtungsflächen gemacht worden.
 
 \subsection{Diodenparameter und Wirkungsgrad einer Solarzelle}
 
+Nun werden die Diodencharakteristik einer Solarzelle bei verschiedenen
+Belichtungsstufen untersucht. Dazu
+
 \subsubsection{Messung der Dunkelkennlinie}
 
 \begin{figure}[H]
@@ -734,6 +736,11 @@ Beschaltungen und Belichtungsflächen gemacht worden.
 
 \subsection{Wärmepumpe}
 
+immer rühren
+
+eisbildung vermeiden hat wahrscheinlich den knick verursacht bei der kalten
+temperatur
+
 \subsection{Kennlinien und Kenndaten von Solarzellen bei Bestrahlung}
 
 mal drauf scheinen lassen damit sich eine betriebstemperatur einstellen kann
@@ -746,6 +753,9 @@ mal drauf scheinen lassen damit sich eine betriebstemperatur einstellen kann
 \subsubsection{Serienschaltung der beiden Solarzellen, wobei eine Solarzelle partiell abgeschattet wird}
 
 \subsection{Diodenparameter und Wirkungsgrad einer Solarzelle}
+
+techinque um die Watt messung wahrheitsgetreuer zu machen mit dem sensor punkte
+abfahren und ein mittel für die linie erstellen
 
 \section{Zusammenfassung}\label{sec:zusammenfassung}
 
