--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -702,7 +702,10 @@ Beschaltungen und Belichtungsflächen gemacht worden.
 \subsection{Diodenparameter und Wirkungsgrad einer Solarzelle}
 
 Nun werden die Diodencharakteristik einer Solarzelle bei verschiedenen
-Belichtungsstufen untersucht. Dazu
+Belichtungsstufen untersucht. Dazu wurde die Strom-Spannung Kennlinien gemessen
+und an die Gleichung für das Zweidioden-Modell gefittet. Um dies zu
+bewerkstelligen wurden folgende Vereinfachungen getroffen: Die implizite
+Anteile werden vernachlässig was
 
 \subsubsection{Messung der Dunkelkennlinie}
 
